# rad

./: .travis.yml  Cargo.toml  README.md
adtools/: Cargo.toml
adtools/src/: lib.rs
src/: dual.rs  lib.rs  xpr.rs
src/xpr/: assign.rs  binary.rs  constant.rs  dual_expression.rs  expression.rs  operation.rs  unary.rs
tests/: dual_property_tests.rs  integration_test.rs
xprlib/: Cargo.toml
xprlib/src/: cmp.rs  derivative.rs  dual.rs  lib.rs  xpr.rs
xprlib/src/xpr/: assign.rs  assign_op.rs  assignop.rs  binary.rs  binary_fn.rs  binary_op.rs  constant.rs  dual_expression.rs  expression.rs  unary.rs  unary_fn.rs  unary_op.rs  wrapper.rs
