[package]
name = "xprlib"
version = "0.1.0"
authors = ["Serhii Malyshev <malyshev13091995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "src/**/*.rs"
]

[dependencies]
toolshed = "0.8.1"
quickcheck = { version = "0.9", optional = true }